--- a/plugin.xml
+++ b/plugin.xml
@@ -8,7 +8,7 @@
     <author>OutSystems Native Experts</author>
 
     <platform name="android">
-        <config-file target="AndroidManifest.xml" parent="/manifest/application">
+        <config-file target="AndroidManifest.xml" parent="/manifest">
             <application android:roundIcon="@mipmap/ic_launcher_round" />
         </config-file>
     </platform>
