--- a/plugin.xml
+++ b/plugin.xml
@@ -8,6 +8,7 @@
     <author>OutSystems Native Experts</author>
 
     <platform name="android">
+        <hook src="scripts/addRoundIcon.js" type="after_prepare" />
         <edit-config file="AndroidManifest.xml" target="/manifest/application" mode="merge">
             <application android:roundIcon="@mipmap/ic_launcher_round" />
         </edit-config>
